--- a/css/style.css
+++ b/css/style.css
@@ -71,10 +71,13 @@ body {
 .row h8 {
 		height:1em;
 		font-size: 30px;
-		padding-left:250px;
+		
 }
 
+#messageinfo {
+	font-size: 10px;
 
+}
 
 
 
@@ -101,6 +104,20 @@ body {
 	height:4em;
 }
 
+.spacer2 {
+	height:2em;
+}
+
+.spacer3 {
+	height:0.5em;
+}
+
+#picture {
+	border-radius:50%;
+
+}
+
+
 
 
 .row h6 {
@@ -109,7 +126,7 @@ body {
 }
 
 .row h10 {
-	padding-left: 340px;
+	
 	font-size: 30px;
 }
 
@@ -184,3 +201,31 @@ body {
 #mc_embed_signup {
 	margin-bottom: 11em
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
